--- a/App/WebRTCHandsOn/Base.lproj/Main.storyboard
+++ b/App/WebRTCHandsOn/Base.lproj/Main.storyboard
@@ -12,11 +12,15 @@
         <!--Navigation Controller-->
         <scene sceneID="w3a-xF-3Za">
             <objects>
-                <navigationController id="Xsu-WB-cAM" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="Xsu-WB-cAM" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="l4H-6B-pMJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="xdu-lV-Un6">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="f23-5C-9yg" kind="relationship" relationship="rootViewController" id="FJl-ih-Ggh"/>
                     </connections>
@@ -70,7 +74,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uXC-8G-v3k" customClass="RTCEAGLVideoView">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bk2-dj-luQ" customClass="RTCCameraPreviewView">
                                         <rect key="frame" x="259" y="16" width="100" height="100"/>
@@ -88,7 +92,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JOS-oY-AKO">
-                                <rect key="frame" x="16" y="72" width="39" height="30"/>
+                                <rect key="frame" x="16" y="28" width="39" height="30"/>
                                 <state key="normal" title="Close"/>
                                 <connections>
                                     <action selector="onClose:" destination="vXf-79-c79" eventType="touchUpInside" id="qlW-cW-l74"/>
